--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
     "workerman/webman-framework": "^1.0",
     "monolog/monolog": "^2.0",
     "topthink/think-orm": "^2.0",
-    "symfony/console": "^5.4"
+    "symfony/console": "^5.4",
+    "ext-json": "*",
+    "illuminate/redis": "8.2.0"
   },
   "suggest": {
     "ext-event": "For better performance. "
