--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,9 @@
     "topthink/think-orm": "^2.0",
     "symfony/console": "^5.4",
     "ext-json": "*",
-    "illuminate/redis": "8.2.0"
+    "illuminate/redis": "8.2.0",
+    "mongodb/mongodb": "^1.6",
+    "zjun/i-mongo": "^1.1"
   },
   "suggest": {
     "ext-event": "For better performance. "
