命令行模式

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "ext-json": "*",
     "illuminate/redis": "8.2.0",
     "mongodb/mongodb": "^1.6",
-    "zjun/i-mongo": "^1.1"
+    "zjun/i-mongo": "^1.1",
+    "workerman/rabbitmq": "^1.0"
   },
   "suggest": {
     "ext-event": "For better performance. "
